<resources>
    <string name="app_name">PersonasMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="btnguardar">GUARDAR</string>
    <string name="btnLimpiar">LIMPIAR</string>
    <string name="tituloCrear">Crear Personas</string>
    <string name="tituloEditar">Editar Personas</string>
    <string name="mensaje_guardado">Persona guardada con exito</string>
    <string name="cedula">Cedula</string>

    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>

    <string name="informacion">INFORMACION</string>
    <string name="sexo">Sexo</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">¿Esta seguro que desea eliminar esta persona?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="persona_existente_error">Ya existe una persona con esta cedula</string>
    <string name="mensaje_seleccion">Seleccione una imagen</string>
    <string name="mensaje_modificar">La edicion ha sido exitosa</string>
    <string name="id_banner_admod">ca-app-pub-9494986497975288/2807156319</string>
    <string name="id_inter_admod">ca-app-pub-9494986497975288/6758843769</string>
    <string name="id_video_admod">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="correo">correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Ingresar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="cuenta_creada">Cuenta Creada con exito</string>

</resources>
